# kotlin-dialect-example

./: .gitignore  README.md
helloworld/: copy-sdk.txt  kd.yml
helloworld/sdk-mac-x64/: gradle.properties  settings.gradle.kts
helloworld/sdk-mac-x64/hw/: build.gradle.kts
helloworld/sdk-mac-x64/hw/src/nativeMain/kotlin/org/opengamestudio/: other.kt
helloworld/sdk-mac-x64/hw/src/nativeMain/kotlin/org/opengamestudio/main/: mainFun.kt  mainProto.kt
helloworld/sdk-windows-x64/: settings.gradle.kts
helloworld/sdk-windows-x64/hw/: build.gradle.kts
helloworld/sdk-windows-x64/hw/src/nativeMain/kotlin/org/opengamestudio/: other.kt
helloworld/sdk-windows-x64/hw/src/nativeMain/kotlin/org/opengamestudio/main/: SaveManager.kt  mainFun.kt  mainProto.kt
helloworld/util/: build-mac-x64  build-windows-x64  gen-kd  launch-mac-x64  launch-windows-x64  other
helloworld/util/step/: buildDesktop  buildDesktopSDK  cloneKD  copyWindowsSDK  copyWindowsSrc  genKD  genWindowsLib
helloworld/ver-android/: build.gradle.kts  gradle.properties
helloworld/ver-android/app/: build.gradle.kts
helloworld/ver-android/app/src/main/: AndroidManifest.xml
helloworld/ver-android/app/src/main/kotlin/org/opengamestudio/: MainActivity.kt  SaveManager.kt  VM.kt  main.kt  mainFun.kt  mainProto.kt  mainUI.kt
helloworld/ver-android/app/src/main/kotlin/org/opengamestudio/main/: MainView.kt  SaveManager.kt  main.kt  mainFun.kt  mainProto.kt
helloworld/ver-android/app/src/main/kotlin/org/opengamestudio/ui/theme/: Color.kt  Theme.kt
helloworld/ver-android/gradle/: libs.versions.toml
helloworld/ver-mac-x64/: CMakeLists.txt
helloworld/ver-mac-x64/src/: App.cpp  VM.cpp
helloworld/ver-mac-x64/src/main/: MainView.qml  main.cpp  main.h
helloworld/ver-windows-x64/: CMakeLists.txt
helloworld/ver-windows-x64/src/: AppView.qml  KT.h  VM.h
